--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -778,6 +778,55 @@ input[type=submit], select {
   background-color: #2980B9;
 }
 
+.uploading {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding-left: 15px;
+  padding-right: 20px;
+  padding-top: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content:center;
+  align-items: center;
+  align-content:center;
+}
+
+.uploading:before {
+  content: '';
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+    background: radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0, .8));
+
+  background: -webkit-radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0,.8));
+}
+
+
+.uploading:not(:required) {
+
+  font: 0/0 a;
+  color: transparent;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+}
+
+.uploading:not(:required):after {
+  content: '';
+  display: block;
+  font-size: 10px;
+  width: 1em;
+  height: 1em;
+  margin-top: -0.5em;
+  border-radius: 0.5em;
+  }
 
 .loading {
   position: fixed;
@@ -791,6 +840,8 @@ input[type=submit], select {
   bottom: 0;
   right: 0;
 }
+
+
 
 
 .loading:before {
